--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL=mongodb+srv://jeyenlam:eerw1GM6fIcZxYB6@expense-tracker-cluster.u77yi24.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://jeyenlam:<key_here>@expense-tracker-cluster.u77yi24.mongodb.net/?retryWrites=true&w=majority
